Sequence, spotbugs fixes